--- a/.github/workflows/mini.yml
+++ b/.github/workflows/mini.yml
@@ -120,16 +120,16 @@ jobs:
       uses: mingxiaoyu/package-flippy-openwrt@main
       id: package
       with:
-        types: l1pro,s905d,beikeyun,s905x3
+        types: s905d
         out: ${{ env.UPLOAD }}
         sub-name: ${{ env.SUB_VERSION}}
-        whoami: mingxiaoyu
+        whoami: ixxmu
         openwrt-path: openwrt/bin/targets/*/*
 
     - name: Package OpenWrt with flippy script(+)     
       uses: mingxiaoyu/package-flippy-openwrt@main
       with:
-        types: l1pro,s905d,beikeyun,s905x3
+        types: s905d
         kernel-version: latest+
         out: ${{ env.UPLOAD }}
         sub-name: ${{ env.SUB_VERSION}}
