--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -54,7 +54,7 @@ jobs:
         out: ${{ env.UPLOAD }}
         sub-name: ${{ env.SUB_VERSION}}
         whoami: ixxmu
-        githubrepository: ixxmu
+        githubrepository: N1Openwrt
         openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
     
     - name: Package OpenWrt with flippy script(+)     
@@ -65,7 +65,7 @@ jobs:
         out: ${{ env.UPLOAD }}
         sub-name: ${{ env.SUB_VERSION}}
         whoami: ixxmu
-        githubrepository: ixxmu
+        githubrepository: N1Openwrt
         openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
              
     - name: Create release
