--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -54,19 +54,15 @@ jobs:
         out: ${{ env.UPLOAD }}
         sub-name: ${{ env.SUB_VERSION}}
         whoami: ixxmu
-        githubrepository: N1Openwrt
+        githubrepository: ixxmu
         openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
     
-    - name: Package OpenWrt with flippy script(+)     
-      uses: mingxiaoyu/package-flippy-openwrt@main
+    - name: Package OpenWrt with flippy script offical    
+      uses: ophub/amlogic-s9xxx-openwrt@main
       with:
-        types: s905d
-        kernel-version: latest+
-        out: ${{ env.UPLOAD }}
-        sub-name: ${{ env.SUB_VERSION}}
-        whoami: ixxmu
-        githubrepository: N1Openwrt
-        openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
+        openwrt_path: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz
+        openwrt_soc: s905d
+        openwrt_kernel: 5.15.50
              
     - name: Create release
       if:  env.RELEASE == 'true' && !cancelled()
@@ -93,7 +89,7 @@ jobs:
              5. gzip -d  *.img.gz
              6. ./update-amlogic-openwrt.sh xxxx.img
              
-        artifacts: "${{ env.UPLOAD }}/*"
+        artifacts: "${{ env.PACKAGED_OUTPUTPATH }}"
                 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
