--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -57,12 +57,17 @@ jobs:
         githubrepository: ixxmu
         openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
     
-    - name: Package OpenWrt with flippy script offical    
-      uses: ophub/amlogic-s9xxx-openwrt@main
-      with:
-        openwrt_path: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz
-        openwrt_soc: s905d
-        openwrt_kernel: 5.15.50
+    - name: Package armvirt as openwrt
+      # if: steps.compile.outputs.status == 'success' && !cancelled()
+      uses: unifreq/openwrt_packit@master
+      env:
+        OPENWRT_ARMVIRT: https://github.com/ixxmu/N1Openwrt/releases/download/20220924/openwrt-armvirt-64-default-rootfs-mini.tar.gz
+        KERNEL_VERSION_NAME: 5.15.71
+        PACKAGE_SOC: s905d
+        GZIP_IMGS: .xz
+        SW_FLOWOFFLOAD: 0
+        SFE_FLOW: 0
+        ENABLE_WIFI_K510: 0
              
     - name: Create release
       if:  env.RELEASE == 'true' && !cancelled()
@@ -89,7 +94,7 @@ jobs:
              5. gzip -d  *.img.gz
              6. ./update-amlogic-openwrt.sh xxxx.img
              
-        artifacts: "${{ env.PACKAGED_OUTPUTPATH }}"
+        artifacts: "${{ env.PACKAGED_OUTPUTPATH }}/*.img.xz"
                 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
