--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -47,15 +47,15 @@ jobs:
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         
-    - name: Package OpenWrt with flippy script(+o) 
-      uses: mingxiaoyu/package-flippy-openwrt@main
-      with:
-        types: s905d
-        out: ${{ env.UPLOAD }}
-        sub-name: ${{ env.SUB_VERSION}}
-        whoami: ixxmu
-        githubrepository: ixxmu
-        openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
+       # - name: Package OpenWrt with flippy script(+o) 
+       #  uses: mingxiaoyu/package-flippy-openwrt@main
+       # with:
+       # # # # # #  types: s905d
+       # # # # #  out: ${{ env.UPLOAD }}
+       # # # # sub-name: ${{ env.SUB_VERSION}}
+       # # # whoami: ixxmu
+       # #  githubrepository: ixxmu
+       #  openwrt-url: https://github.com/ixxmu/N1Openwrt/releases/download/${{ env.version }}/openwrt-armvirt-64-default-rootfs-${{ env.SUB_VERSION }}.tar.gz 
     
     - name: Package armvirt as openwrt
       # if: steps.compile.outputs.status == 'success' && !cancelled()
