--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -94,7 +94,7 @@ jobs:
              5. gzip -d  *.img.gz
              6. ./update-amlogic-openwrt.sh xxxx.img
              
-        artifacts: "${{ env.PACKAGED_OUTPUTPATH }}/*.img.xz"
+        artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
                 
     - name: Delete workflow runs
       uses: GitRML/delete-workflow-runs@main
