--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -54,7 +54,7 @@ jobs:
         OPENWRT_ARMVIRT: https://github.com/ixxmu/N1Openwrt/releases/download/20220924/openwrt-armvirt-64-default-rootfs-mini.tar.gz
         KERNEL_VERSION_NAME: 5.15.71
         PACKAGE_SOC: s905d
-        GZIP_IMGS: .xz
+        GZIP_IMGS: .gz
         SW_FLOWOFFLOAD: 0
         SFE_FLOW: 0
         ENABLE_WIFI_K510: 0
