--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -53,6 +53,7 @@ jobs:
       env:
         OPENWRT_ARMVIRT: https://github.com/mingxiaoyu/N1Openwrt/releases/download/20220506/openwrt-armvirt-64-default-rootfs-mini.tar.gz
         KERNEL_VERSION_NAME: 5.15.71
+        KERNEL_AUTO_LATEST: true
         PACKAGE_SOC: s905d
         GZIP_IMGS: .gz
         SW_FLOWOFFLOAD: 0
@@ -66,7 +67,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: OpenWrt_${{ env.PACKAGED_OUTPUTDATE }}
-        files: ${{ env.PACKAGED_OUTPUTPATH }}/*.img.xz
+        files: ${{ env.PACKAGED_OUTPUTPATH }}/*.img.gz
         body: |
           默认IP：192.168.31.2 默认密码： password
           全新刷入emmc方法：
