--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -51,7 +51,7 @@ jobs:
       # if: steps.compile.outputs.status == 'success' && !cancelled()
       uses: unifreq/openwrt_packit@master
       env:
-        OPENWRT_ARMVIRT: https://github.com/mingxiaoyu/N1Openwrt/releases/download/20220506/openwrt-armvirt-64-default-rootfs-mini.tar.gz
+        OPENWRT_ARMVIRT: https://github.com/ophub/amlogic-s9xxx-openwrt/releases/download/OpenWrt_Aml_official_09.29.1038/openwrt-armvirt-64-default-rootfs.tar.gz
         KERNEL_VERSION_NAME: 5.4.215
         KERNEL_AUTO_LATEST: true
         PACKAGE_SOC: s905d
